--- a/example/pages/components/data-entry/tree-select/index.html
+++ b/example/pages/components/data-entry/tree-select/index.html
@@ -25,6 +25,10 @@
             ng-model="selectValue"
             ma-placeholder="select"
 
+            ma-text-key="text1"
+            ma-value-key="value1"
+            ma-sub-key="sub1"
+
             ma-search="true"
             ma-clear="true"
 
