--- a/example/pages/components/data-entry/transfer/index.html
+++ b/example/pages/components/data-entry/transfer/index.html
@@ -41,9 +41,9 @@
           ng-model="selectTreeValue"
 
           ma-data="treeData"
-          ma-value-key="value"
-          ma-text-key="text"
-          ma-sub-key="sub"
+          ma-value-key="value1"
+          ma-text-key="text1"
+          ma-sub-key="sub1"
 
           ma-left-title="所有"
           ma-right-title="选中"
