--- a/example/pages/components/data-entry/transfer/index.html
+++ b/example/pages/components/data-entry/transfer/index.html
@@ -25,8 +25,8 @@
           ng-model="selectValue"
 
           ma-data="data"
-          ma-value-key="value"
-          ma-text-key="text"
+          ma-value-key="value1"
+          ma-text-key="text1"
 
           ma-left-title="所有"
           ma-right-title="选中"
