--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -30,6 +30,7 @@
       </div>
     </div>
     <div class="p">
+      <code ng-bind="codeText"></code>
       <code>
         ng-model 数据结构
         [{
