--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -62,6 +62,9 @@
           limit: Number.MAX_VALUE,
           size: 10 * 1024 * 1000,
           accept: '',
+          convert: function (data, response){
+
+          }
         }
       </code>
     </div>
