--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -57,11 +57,11 @@
           queueLimit: Number.MAX_VALUE,
           withCredentials: false,
           disableMultipart: false
-
           multiple: false
           limit: Number.MAX_VALUE,
           size: 10 * 1024 * 1000,
           accept: '',
+          uploadText: '上传图片'。
           convert: function (data, response){
 
           }
