--- a/example/pages/components/data-entry/upload/index.html
+++ b/example/pages/components/data-entry/upload/index.html
@@ -17,7 +17,7 @@
     <div class="p clearfix">
       <div class="mb-20 clearfix">
         <div class="col-12 pr-20">
-          <div ma-upload ng-model="uploadValue"></div>
+          <div ma-upload ma-upload-config="uploadConfig" ng-model="uploadValue"></div>
         </div>
         <div class="col-12">
           <ma-button>
