--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -155,6 +155,7 @@ input.ma-input {
       content: "\eea3";
       color: $base;
       background-color: $disabled;
+      cursor: pointer;
     }
     textarea,
     input {
