--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -92,6 +92,12 @@
           <td>Date</td>
           <td>false</td>
         </tr>
+        <tr>
+          <td>ma-clear</td>
+          <td>显示清空按钮</td>
+          <td>Boolean</td>
+          <td>true</td>
+        </tr>
       </table>
 
       <h3 class="mt-20">ma-date-range-picker</h3>
@@ -119,6 +125,12 @@
           <td>最大可选时间</td>
           <td>Date</td>
           <td>false</td>
+        </tr>
+        <tr>
+          <td>ma-clear</td>
+          <td>显示清空按钮</td>
+          <td>Boolean</td>
+          <td>true</td>
         </tr>
         <tr>
           <td>ma-config</td>
