--- a/src/components/datepicker/src/maDateRangePickerTpl.html
+++ b/src/components/datepicker/src/maDateRangePickerTpl.html
@@ -6,6 +6,6 @@
   <ma-icon ma-type="calendar"></ma-icon>
   <ma-icon ma-type="close"
     ma-click="clear()"
-    ng-show="dateText"
+    ng-show="dateText && showClear !== 'false'"
     class="clear"></ma-icon>
 </div>
