--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -13,6 +13,8 @@
     position: relative;
     top: 1px;
     cursor: pointer;
+    -webkit-transition: border-color 300ms ease, color 300ms ease;
+    transition: border-color 300ms ease, color 300ms ease;
     > div {
       padding: 10px 0px;
     }
