--- a/src/components/popconfirm/src/maPopconfirmTpl.html
+++ b/src/components/popconfirm/src/maPopconfirmTpl.html
@@ -2,5 +2,6 @@
   ma-tooltip="{{template}}"
   ma-direction="{{direction}}"
   ma-popconfirm="true"
+  ma-click-hide="{{clickHide}}"
   ma-scope="$parent"
   ng-transclude=""></div>
