--- a/src/scss/_popconfirm.scss
+++ b/src/scss/_popconfirm.scss
@@ -3,10 +3,11 @@
 }
 
 .ma-popconfirm-tooltip {
-  max-width: 260px;
+  max-width: $minWidth;
   .ma-tooltip-content {
     padding: 12px 15px;
     background-color: $white;
+    -webkit-box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.20);
     box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 0.20);
     border-radius: 4px;
     font-size: $font14;
