--- a/example/pages/components/feedback/popconfirm/index.html
+++ b/example/pages/components/feedback/popconfirm/index.html
@@ -23,14 +23,18 @@
       </div>
       <div class="col-12">
         <ma-popconfirm ma-template="popconfirmTemplateText"
-          ma-direction="tr">
-          <a href="javascript:void(0)">点我我是气泡文本框</a>
+          ma-direction="tr"
+          ma-click-hide="true">
+          <a href="
+          javascript:void(0)
+          ">点我我是气泡文本框</a>
         </ma-popconfirm>
       </div>
     </div>
 
     <h3>API</h3>
-    <div class="p">
+    <div class="p
+          ">
       <table>
         <tr>
           <th>属性</th>
