alert优化，popconfirm添加显示隐藏回调

--- a/example/pages/components/feedback/alert/index.html
+++ b/example/pages/components/feedback/alert/index.html
@@ -15,7 +15,7 @@
     <div class="p clearfix">
       <ma-alert
         ma-items="alertItems"
-        class="mb-20"
+        ma-class="mb-20"
       ></ma-alert>
     </div>
     <div class="p">
@@ -47,6 +47,12 @@
           <td>ma-items</td>
           <td>提示文本对象</td>
           <td>Array</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>ma-class</td>
+          <td>此样式会应用于alert的每个item</td>
+          <td>String</td>
           <td>-</td>
         </tr>
       </table>
