--- a/src/components/popconfirm/src/maPopconfirmTpl.html
+++ b/src/components/popconfirm/src/maPopconfirmTpl.html
@@ -3,5 +3,6 @@
   ma-direction="{{direction}}"
   ma-popconfirm="true"
   ma-click-hide="{{clickHide}}"
+  ma-change-callback="changeCallbackLink(show)"
   ma-scope="$parent"
   ng-transclude=""></div>
