table，左右漂浮优化，ng-show 改成 ng-if

--- a/src/components/table/src/maTableTpl.html
+++ b/src/components/table/src/maTableTpl.html
@@ -28,7 +28,7 @@
       <!-- 左边漂浮 table -->
       <div class="float-left-table"
         style="width: {{$tableCtrl.floatLeftBoxWidth}}px; height: {{$tableCtrl.floatTableHeight}}px;"
-        ng-show="$tableCtrl.floatLeftCols.length">
+        ng-if="$tableCtrl.floatLeftCols !== false">
         <div style="width: {{$tableCtrl.floatTableWidth}}px;">
           <table template-header='header1.html'
             ng-table-dynamic="$tableCtrl.tableParams with $tableCtrl.cols"
@@ -55,7 +55,6 @@
                   </ma-checkbox>
                 </div>
 
-
                 <div ng-if='col.render'
                   common-table-col-render="col.render(this, row, row[col.field])"></div>
 
@@ -76,7 +75,7 @@
       <!-- 右边漂浮 table -->
       <div class="float-right-table"
         style="width: {{$tableCtrl.floatRightBoxWidth}}px; height: {{$tableCtrl.floatTableHeight}}px;"
-        ng-show="$tableCtrl.floatRightCols.length">
+        ng-if="$tableCtrl.floatRightCols !== false">
 
         <div style="width: {{$tableCtrl.floatTableWidth}}px;">
           <table template-header='header1.html'
@@ -103,12 +102,11 @@
                   </ma-checkbox>
                 </div>
 
-
                 <div ng-if='col.render'
-                  common-table-col-render="col.render(this, row)"></div>
+                  common-table-col-render="col.render(this, row, row[col.field])"></div>
 
                 <div ng-if='!col.render && col.customHtml'
-                  ng-bind-html="col.customHtml(this, row)"></div>
+                  ng-bind-html="col.customHtml(this, row, row[col.field])"></div>
 
                 <div ng-if='!col.render && !col.customHtml'>
                   <span ng-switch-default>{{row[col.field]}}</span>
@@ -125,6 +123,7 @@
           ng-table-dynamic="$tableCtrl.tableParams with $tableCtrl.cols"
           class="table table-condensed table-bordered table-striped main-table"
           ng-class="{'has-float-table': $tableCtrl.floatLeftCols.length || $tableCtrl.floatRightCols.length}"
+
           style="width: {{$tableCtrl.tableWidth && $tableCtrl.tableWidth > $tableCtrl.mainContainerWidth ? $tableCtrl.tableWidth + 'px' : '100%'}}">
           <colgroup ng-if="$tableCtrl.colsGroup && $tableCtrl.colsGroup.length == $tableCtrl.cols.length">
             <col ng-repeat="group in $tableCtrl.colsGroup"
@@ -147,12 +146,11 @@
                 </ma-checkbox>
               </div>
 
-
               <div ng-if='col.render'
-                common-table-col-render="col.render(this, row)"></div>
+                common-table-col-render="col.render(this, row, row[col.field])"></div>
 
               <div ng-if='!col.render && col.customHtml'
-                ng-bind-html="col.customHtml(this, row)"></div>
+                ng-bind-html="col.customHtml(this, row, row[col.field])"></div>
 
               <div ng-if='!col.render && !col.customHtml'>
                 <span ng-switch-default>{{row[col.field]}}</span>
