--- a/example/pages/components/data-entry/datepicker/index.html
+++ b/example/pages/components/data-entry/datepicker/index.html
@@ -49,6 +49,7 @@
         <h4>date range picker</h4>
         <ma-date-range-picker name="datepicer5"
           ng-model="rangePickerDate"
+          ma-max-date="maxDate"
           ma-format="YYYY-MM-DD"></ma-date-range-picker>
       </div>
     </div>
