--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -6,8 +6,8 @@
     view="{{view}}"
     date-change="changeValue"
     min-view="{{minView}}"
-    min-date="minDate"
-    max-date="maxDate"
+    min-date="_minDate"
+    max-date="_maxDate"
     placeholder="{{maPlaceholder}}"
     format="{{format}}">
   <ma-icon ma-type="calendar"></ma-icon>
