--- a/src/components/datepicker/src/maDatePickerTpl.html
+++ b/src/components/datepicker/src/maDatePickerTpl.html
@@ -8,6 +8,7 @@
     min-view="{{minView}}"
     min-date="_minDate"
     max-date="_maxDate"
+    ng-disabled="disabled"
     placeholder="{{maPlaceholder}}"
     format="{{format}}">
   <ma-icon ma-type="calendar"></ma-icon>
