--- a/src/components/datepicker/src/maDateRangePickerTpl.html
+++ b/src/components/datepicker/src/maDateRangePickerTpl.html
@@ -2,6 +2,7 @@
   <input class="ma-input"
     ng-readonly="true"
     placeholder="{{maPlaceholder}}"
+    ng-disabled="disabled"
     ng-model="dateText">
   <ma-icon ma-type="calendar"></ma-icon>
   <ma-icon ma-type="close"
