--- a/src/scss/_tree-select.scss
+++ b/src/scss/_tree-select.scss
@@ -77,7 +77,8 @@ body > .select2-container.open {
   border-top-width: 1px;
   /* FIXME hardcoded value :-/ */
   border-top-style: solid;
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
   margin-top: -4px;
   /* FIXME hardcoded value :-/ */
 }
@@ -145,7 +146,8 @@ body > .select2-container.open {
 /* Handle up direction Selectize */
 
 .ui-select-container[theme="selectize"].direction-up .ui-select-dropdown {
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
   margin-top: -2px;
   /* FIXME hardcoded value :-/ */
 }
@@ -173,7 +175,8 @@ body > .select2-container.open {
   text-decoration: none;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
 .ui-select-bootstrap .ui-select-toggle {
@@ -350,7 +353,8 @@ body > .ui-select-bootstrap.open {
 /* Handle up direction Bootstrap */
 
 .ui-select-container[theme="bootstrap"].direction-up .ui-select-dropdown {
-  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.25);
 }
 
 .ui-select-bootstrap .ui-select-match-text {
@@ -439,7 +443,8 @@ select2.scss
   */
   /* webkit */
   /* firefox */
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* css3 */
 }
 
@@ -571,7 +576,8 @@ select2.scss
   border: 1px solid #aaa;
   border-top: 0;
   border-radius: 0 0 4px 4px;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+  -webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
+          box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
   @include transition();
   @include transform-origin(top center);
 }
@@ -590,7 +596,8 @@ select2.scss
   border-top: 1px solid #aaa;
   border-bottom: 0;
   border-radius: 4px 4px 0 0;
-  box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
+  -webkit-box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
+          box-shadow: 0 -4px 5px rgba(0, 0, 0, .15);
 }
 
 .select2-drop-active {
@@ -661,7 +668,8 @@ select2.scss
   font-size: 1em;
   border: 1px solid #aaa;
   border-radius: 0;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -687,12 +695,14 @@ select2.scss
 .select2-container-active .select2-choices {
   border: 1px solid #5897fb;
   outline: none;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+          box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 
 .select2-dropdown-open .select2-choice {
   border-bottom-color: transparent;
-  box-shadow: 0 1px 0 #fff inset;
+  -webkit-box-shadow: 0 1px 0 #fff inset;
+          box-shadow: 0 1px 0 #fff inset;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   background-color: #eee;
@@ -909,7 +919,8 @@ disabled look for disabled choices in the results dropdown
 .select2-container-multi.select2-container-active .select2-choices {
   border: 1px solid #5897fb;
   outline: none;
-  box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+          box-shadow: 0 0 5px rgba(0, 0, 0, .3);
 }
 
 .select2-container-multi .select2-choices li {
@@ -931,7 +942,8 @@ disabled look for disabled choices in the results dropdown
   color: #666;
   outline: 0;
   border: 0;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   background: transparent !important;
 }
 
@@ -957,7 +969,8 @@ disabled look for disabled choices in the results dropdown
   cursor: default;
   border: 1px solid #aaaaaa;
   border-radius: 3px;
-  box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0 2px #fff inset, 0 1px 0 rgba(0, 0, 0, 0.05);
   background-clip: padding-box;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -1064,7 +1077,8 @@ disabled look for disabled choices in the results dropdown
 .form-control.ui-select-container {
   padding: 0px;
   border: 0px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .form-control.ui-select-container.open {}
@@ -1180,7 +1194,8 @@ disabled look for disabled choices in the results dropdown
 .ui-select-container.select2.direction-up .ui-select-dropdown {
   border: 1px solid #ffffff;
   margin-top: 0px;
-  box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, 0.20);
+  -webkit-box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, 0.20);
+          box-shadow: 0 -1px 3px 0 rgba(0, 0, 0, 0.20);
   border-top-width: 0px !important;
 }
 
@@ -1202,7 +1217,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-drop {
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+          box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
   border: 1px solid #ffffff;
   z-index: 999;
   border-top: 0px;
@@ -1216,7 +1232,8 @@ disabled look for disabled choices in the results dropdown
 .select2-container .select2-choice {
   padding-left: 7px;
   border: 0px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-radius: 4px 4px 4px 4px;
   font-size: 14px;
   color: #808080 !important;
@@ -1240,7 +1257,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container.open .select2-choice {
-  box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20) !important;
+  -webkit-box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20) !important;
+          box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20) !important;
   border-radius: 4px 4px 0px 0px !important;
   border-color: #ffffff !important;
 }
@@ -1304,7 +1322,8 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-choices .select2-search-choice {
   margin: 3px 5px 0px 0px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   padding: 0px 5px;
   background-color: #ededef;
   border-radius: 4px;
@@ -1321,7 +1340,8 @@ disabled look for disabled choices in the results dropdown
 .select2-container-multi .select2-choices {
   padding: 0px 30px 3px 10px;
   border: 0px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-radius: 4px 4px 4px 4px;
   font-size: 14px;
   color: #808080 !important;
@@ -1339,13 +1359,15 @@ disabled look for disabled choices in the results dropdown
   border-radius: 0px 0px 4px 4px;
   border: 0px;
   border-top: 1px solid $outlines;
-  box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20);
+  -webkit-box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20);
+          box-shadow: 0 0px 3px 0 rgba(0, 0, 0, 0.20);
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
   border-color: rgba($black, 0.1);
   border-bottom: 1px solid $shadow;
-  box-shadow: 0 0px 1px 0 rgba($black, 0.25);
+  -webkit-box-shadow: 0 0px 1px 0 rgba($black, 0.25);
+          box-shadow: 0 0px 1px 0 rgba($black, 0.25);
 }
 
 .select2-container-multi .select2-choices span {
@@ -1541,7 +1563,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .custom-multi-select.custom-static-select .select2-drop {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .select2-results::-webkit-scrollbar {
@@ -1632,5 +1655,9 @@ disabled look for disabled choices in the results dropdown
   }
   &.ma-input-success .select2-choices {
     border-color: $success;
+  }
+  .select2-container-multi.select2-container-disabled .select2-choices {
+    border-color: $outlines;
+    background-color: transparent;
   }
 }
