--- a/src/components/menu/src/maSecondMenuTpl.html
+++ b/src/components/menu/src/maSecondMenuTpl.html
@@ -5,6 +5,7 @@
       ng-if="router.state.indexOf(router.parent.state + '.') !== -1 &&
       $state.current.name.indexOf(router.parent.state + '.') !== -1 &&
       router.hidden !== true &&
+      router.hiddenSecond !== true &&
       router.level <= 2"
 
       ng-class="{active: $state.href($state.current.name, $state.params) === $state.href(router.state, router.params) || $state.current.name.indexOf(router.state + '.') !== -1}">
